/*
 * Copyright 2005-2019 Dozer Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "com.github.dozermapper.protobuf.vo.proto";
option java_outer_classname = "ProtoTestObjects";

message SimpleProtoTestObject {
    string one = 1;
}

message SimpleProtoTestObjectWithoutRequired {
    string one = 1;
}

message ProtoTestObjectWithNestedProtoObject {
    string one = 1;
    SimpleProtoTestObject nestedObject = 2;
}

enum ProtoEnum {
    VALUE0 = 0;
    VALUE1 = 1;
    VALUE2 = 2;
}

message ProtoObjectWithEnumField {
    ProtoEnum enumField = 1;
}

message ProtobufWithSimpleCollection {
    repeated SimpleProtoTestObject object = 1;
}

message ProtobufWithSimpleCollectionContainer {
    ProtobufWithSimpleCollection object = 1;
}

message ProtobufWithEnumCollection {
    repeated ProtoEnum object = 1;
}

message ProtobufMapExample {
    map<string, string> value = 1;
}

message ProtobufFieldNaming {
    string snake_case_field = 1;
}
